Fix alignment of calendar 'bullets' in 'More' state

--- a/fec/fec/static/scss/components/_calendar.scss
+++ b/fec/fec/static/scss/components/_calendar.scss
@@ -521,7 +521,6 @@
     padding: u(3px .5rem);
 
     .fc-title {
-      float: left;
       font-weight: bold;
       height: auto;
       line-height: u(2rem);
